# LinkAuto-APP

./: .dockerignore  .gitignore  .npmignore  GEMINI.md  README.md  package-lock.json  progressTracker-frontend.md  progressTracker.md
.github/: copilot-instructions.md
docs/: DESIGN.md  README.en.md  known-issues.md  logo_design_template.md  requirements.md
infra/: docker-compose.yml
linkauto-backend/: README.md  pyproject.toml
linkauto-backend/alembic/: env.py
linkauto-backend/alembic/versions/: 0001_foundation.py
linkauto-backend/app/: __init__.py  main.py
linkauto-backend/app/api/: __init__.py
linkauto-backend/app/api/v1/: __init__.py  admin_instructors.py  auth.py  foundation.py  instructor_documents.py  users.py
linkauto-backend/app/core/: config.py  dev_db.py  security.py
linkauto-backend/app/domain/: __init__.py  booking.py
linkauto-backend/app/models/: __init__.py  base.py  instructor_document.py  user.py
linkauto-backend/app/schemas/: __init__.py  common.py
linkauto-backend/app/services/: __init__.py  admin_validation_service.py  auth_service.py  booking_lock_service.py  booking_scheduler.py  dependencies.py  document_cleanup_service.py  instructor_document_service.py  notification_service.py  profile_service.py  us1_store.py
linkauto-backend/tests/: conftest.py
linkauto-backend/tests/contract/: test_foundation_contract.py  test_us1_auth_profile_contract.py
linkauto-backend/tests/integration/: test_booking_state_machine.py  test_us1_document_upload_validation.py  test_us1_profiles_visibility.py
linkauto-frontend/: eslint.config.js  (+8 more)
(+152 files in other folders)
